--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ DEFAULT_SITE_URL=""
 # Amazon S3 credentials
 S3_ACCESS_KEY_ID=""
 S3_SECRET_ACCESS_KEY=""
+S3_BUCKET=""
 S3_BASE_URL=""
 
 # Stripe credentials (test account)
